# FYP-Predictive_Anomaly_Detection

./: .gitignore  CITATION.cff  CONTRIBUTING.md  FYP_Term1_Report_Outline.md  README.md  app.py  pyproject.toml  references.bib
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-gnn-verifier-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-CONTEXT.md  01-RE-VERIFICATION.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-hybrid-verifier-integration/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md
.planning/phases/03-graph-aware-proposer/: 03-01-SUMMARY.md  03-02-SUMMARY.md
.planning/phases/04-evaluation-framework/: 04-01-SUMMARY.md  04-02-SUMMARY.md  04-03-SUMMARY.md  04-04-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  RESEARCH_SUMMARY.md  STACK.md  SUMMARY.md
configs/: hybrid_verifier.yaml
docs/: diagrams.md  selfplay_design.md  selfplay_implementation.md
examples/: ablation_study.py  baseline_comparison.py  hebbian_stress_test.py  selfplay_bdh_demo.py  selfplay_quick_demo.py
notebooks/: 01_lcl_exploration.ipynb  02_ukdale_exploration.ipynb  03_ssen_constraints.ipynb  04_cross_dataset_comparison.ipynb  05_ssen_validation.ipynb
scripts/: check_pytorch.py  evaluate_gnn_verifier.py  evaluate_verifiers.py  generate_evaluation_figures.py  run_ablation_study.py  run_large_scale_experiment.py  run_large_scale_experiment_FIXED.py  run_large_scale_experiment_v3.py  test_fixes.sh  test_large_scale_basic.py  test_v3_quick.sh  train_gnn_verifier.py  verify_completion.py
src/fyp/: metrics.py  runner.py
src/fyp/evaluation/: __init__.py  ablation.py  benchmark.py
src/fyp/gnn/: __init__.py  gat_verifier.py  graph_builder.py  synthetic_dataset.py  temporal_encoder.py  trainer.py
src/fyp/ingestion/: ssen_ingestor.py
src/fyp/models/: ensemble.py  frequency_enhanced.py
src/fyp/selfplay/: __init__.py  bdh_enhancements.py  hybrid_verifier.py  hybrid_verifier_config.py  proposer.py  solver.py  trainer.py
tests/: test_baselines.py  test_evaluation.py  test_graph_proposer.py  test_hybrid_verifier.py  test_ingestion_complete.py  test_ingestion_enhanced.py  test_selfplay.py  test_smoke.py  test_ssen_ingestion.py
tests/test_gnn/: __init__.py  test_gat_verifier.py  test_graph_builder.py  test_synthetic_dataset.py  test_trainer.py
